# shadows

./: .gitmodules  LICENSE  README.txt
ground_truth_drawing/: draw.py
image_analysis/: .gitignore  analyse.py  check_shadow_edges.py
learning/: .gitignore  filter_features.py
learning/edges/: extract_features.py
learning/edges/extractor/: lalonde.py  normals.py  utils.py
learning/grid/: extract_features.py
methods/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  build.sh  doxyfile.in  time.sh
methods/src/: bilateral_filter.cpp  chromacity.cpp  contours.cpp  dumber_lalonde.cpp  edges.cpp  ground_truth.cpp  regions.cpp  simple_threshold.cpp
methods/src/utils/: shadows.hpp  utils.cpp
test_harness/: config.yaml  graph.py  harness.py  scenes.yaml
test_harness/utils/: graph.py  harness.py  yaml_ordered_dict.py
